# hex-foundation

./: .github-description.txt  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VERSIONS  ZONES.md  bootstrap-migrate.sh  install.sh
.github/workflows/: core-e2e.yml
.hex/: stats.py
.hex/memory/: save.py  search.py
docs/: architecture.md  capabilities-map.md  integrations.md  migrate-v1-to-v2.md  multi-agent.md  testing.md  versioning.md
docs/extensibility/: deep-use-cases.md  proposal-v2.md  proposal.md
docs/intelligent-routing/: consolidation-design.md  memory-architectures.md  memory-benchmark.md  roadmap.md  routing-proposal.md
system/harness/: Cargo.toml  build.rs
system/harness/src/: audit.rs  charter.rs  claude.rs  cost.rs  events.rs  extensions.rs  gate.rs  lib.rs  main.rs  message.rs  prompt.rs  queue.rs  server.rs  state.rs  types.rs  wake.rs
system/harness/tests/: charter_test.rs  claude_test.rs  gate_test.rs  loop_detection_test.rs  prompt_test.rs  queue_test.rs  state_test.rs
system/harness/tests/fixtures/: bad-budget-charter.yaml  valid-charter.yaml  zero-budget-charter.yaml
templates/: AGENTS.md  CLAUDE.md  changelog.md  decision-template.md  learnings.md  me.md  observations.md  suggestions.md  todo.md
tests/: Dockerfile  test-doctor-events-coverage.sh  test_doctor.bats  test_e2e.sh  test_hex_doctor_hex_binary_version_sync.bats  test_macos_e2e.sh  test_memory.py  test_path_mapping.bats  test_release_gates.sh  test_skill_discovery.sh  test_skill_discovery_codex.sh  test_skill_frontmatter.sh  test_skill_refs.sh
(+202 files in other folders)
