[package]
name = "hex-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
shellexpand = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
