[package]
name = "hex"
# Source of truth for hex version. Bumped by release.sh; build.rs
# injects this via env!("CARGO_PKG_VERSION") at compile time.
version = "0.12.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
shellexpand = "3"
glob = "0.3"
sha2 = "0.10"
hex-bytes = { package = "hex", version = "0.4" }
fs2 = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
